--- a/IdeasAi.csproj
+++ b/IdeasAi.csproj
@@ -87,6 +87,9 @@
     <PackageReference Include="Markdig">
       <Version>0.41.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Web.WebView2">
+      <Version>1.0.3240.44</Version>
+    </PackageReference>
     <PackageReference Include="PlantUml.Net">
       <Version>1.4.80</Version>
     </PackageReference>
